fix for search component z-index

--- a/frontend/core/src/components/tasks/search/index.module.css
+++ b/frontend/core/src/components/tasks/search/index.module.css
@@ -3,6 +3,7 @@
 
 .popup {
   position: relative;
+  z-index: var(--z-index-popup);
 }
 
 .overlay {
